2019-1/231/users/4216/executions/1769_1583.log
== TEST (2019-05-29 12:15:49) 
-- CODE:
n = int(input("insira um numero: "))
c = str(n)
m = c[3]
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    m = c[3]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:16:02) 
-- CODE:
n = int(input("insira um numero: "))
c = str(n)
m = c[:3]
print(m)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:16:50) 
-- CODE:
n = int(input("insira um numero: "))
t = str(n)
m = t[:3]
c = t[3:6]
print(m)
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:17:08) 
-- CODE:
n = int(input("insira um numero: "))
t = str(n)
m = t[:3]
c = t[3:6]
print(m, ", ", c)
-- OUTPUT:
123 ,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:17:17) 
-- CODE:
n = int(input("insira um numero: "))
t = str(n)
m = t[:3]
c = t[3:6]
print(m, ", ", c)
-- OUTPUT:
123 ,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:17:42) 
-- CODE:
n = int(input("insira um numero: "))
t = str(n)
m = t[:3]
c = t[3:6]
d = t[6:]
print(m, ", ", c)
-- OUTPUT:
123 ,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:17:55) 
-- CODE:
n = int(input("insira um numero: "))
t = str(n)
m = t[:3]
c = t[3:6]
d = t[6:]
print(m, ", ", c, ",", d )
-- OUTPUT:
123 ,   ,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:18:31) 
-- CODE:
n = int(input("insira um numero: "))
t = str(n)
m = t[:3]
c = t[3:6]
d = t[6:]
p = "."
print(m,p,c,p,d )
-- OUTPUT:
123 .  .
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:18:37) 
-- CODE:
n = int(input("insira um numero: "))
t = str(n)
m = t[:3]
c = t[3:6]
d = t[6:]
p = "."
print(m,p,c,p,d )
-- EXECUTION TIME:
0.178425
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123 .  .
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123 . 456 . 789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987 . 654 . 321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:19:01) 
-- CODE:
n = int(input("insira um numero: "))
t = str(n)
m = t[:3]
c = t[3:6]
d = t[6:]
p = "."
print(m+p+c+p+d )
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:19:06) 
-- CODE:
n = int(input("insira um numero: "))
t = str(n)
m = t[:3]
c = t[3:6]
d = t[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.130296
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:22:41) 
-- CODE:
n = int(input("insira um numero: "))
t = str(n)
m = t[:3]
c = t[3:6]
d = t[6:]
p = "."
print(m+p+c+p+d )
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:22:42) 
-- CODE:
n = int(input("insira um numero: "))
t = str(n)
m = t[:3]
c = t[3:6]
d = t[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.140633
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:23:01) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = t[:3]
c = t[3:6]
d = t[6:]
p = "."
print(m+p+c+p+d )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    m = t[:3]
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:23:14) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:23:18) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.132504
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:23:23) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.14095
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:23:24) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.159034
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:23:24) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.146225
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
987.654.321
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
123..
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:23:25) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.171885
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123..
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
123.456.789000987654321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:23:25) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.15224
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123..
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
123.456.789000987654321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:23:25) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.231438
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123.456.789000987654321
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123..
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:23:25) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.191359
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123.456.789000987654321
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:23:25) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.368132
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
987.654.321
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:23:27) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.138429
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:23:28) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.205662
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:22:57) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:33:06) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:45:10) 
-- CODE:
n = str(int(input("insira um numero: ")))
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.156366
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:45:29) 
-- CODE:
t =(int(input("insira um numero: ")))
n = str(t)
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:45:32) 
-- CODE:
t = (int(input("insira um numero: ")))
n = str(t)
m = n[:3]
c = n[3:6]
d = n[6:]
p = "."
print(m+p+c+p+d )
-- EXECUTION TIME:
0.167597
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:43:23) 
-- CODE:
#t = (int(input("insira um numero: ")))
#n = str(t)
#m = n[:3]
#c = n[3:6]
#d = n[6:]
#p = "."
#print(m+p+c+p+d )

from numpy import*

s = input()

s1 = array([], dtype = str)

i = 0
j = 0
while(i < len(s)):
	if(i % 3 == 0 and i != 0):
		s1 = append(s1, [s[i-3:i] + "."])
		j = i
	i = i + 1
	
s1 = append(s1, [s[j:]])

s = ""
i = 0
while(i < size(s1)):
	s = s + s1[i]
	i = i + 1

print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:43:27) 
-- CODE:
#t = (int(input("insira um numero: ")))
#n = str(t)
#m = n[:3]
#c = n[3:6]
#d = n[6:]
#p = "."
#print(m+p+c+p+d )

from numpy import*

s = input()

s1 = array([], dtype = str)

i = 0
j = 0
while(i < len(s)):
	if(i % 3 == 0 and i != 0):
		s1 = append(s1, [s[i-3:i] + "."])
		j = i
	i = i + 1
	
s1 = append(s1, [s[j:]])

s = ""
i = 0
while(i < size(s1)):
	s = s + s1[i]
	i = i + 1

print(s)
-- EXECUTION TIME:
1.19447
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:43:27) 
-- CODE:
#t = (int(input("insira um numero: ")))
#n = str(t)
#m = n[:3]
#c = n[3:6]
#d = n[6:]
#p = "."
#print(m+p+c+p+d )

from numpy import*

s = input()

s1 = array([], dtype = str)

i = 0
j = 0
while(i < len(s)):
	if(i % 3 == 0 and i != 0):
		s1 = append(s1, [s[i-3:i] + "."])
		j = i
	i = i + 1
	
s1 = append(s1, [s[j:]])

s = ""
i = 0
while(i < size(s1)):
	s = s + s1[i]
	i = i + 1

print(s)
-- EXECUTION TIME:
1.20646
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
